<resources>
    <string name="app_name">FutbolitoApp</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Correo</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in">Iniciar Sesión</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="text_register_title">Registro</string>
    <string name="prompt_username_r">Nombre de usuario</string>
    <string name="prompt_email_r">Correo electrónico</string>
    <string name="prompt_pass1_r">Contraseña</string>
    <string name="prompt_pass2_r">Confirmar contraseña</string>
    <string name="action_register">Registrar</string>
    <string name="action_register_login">Registrarse</string>
    <string name="olvidar_contrasenia">¿Olvidaste tu contraseña?</string>
    <string name="name_register">Registro</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="facebook_app_id">176506702781956</string>
</resources>
