<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="futbolitoapp.apliko.co.futbolitoapp.RegistroActivity"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/textView"
        android:text="@string/text_register_title"
        android:layout_gravity="left"
        android:textAlignment="center"
        android:textSize="40dp"
        android:paddingBottom="@dimen/abc_action_bar_icon_vertical_padding_material" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/username_reg"
        android:hint="@string/prompt_username_r"
        android:textSize="25dp"
        android:text="dcruz" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/email_reg"
        android:layout_gravity="center_horizontal"
        android:hint="@string/prompt_email_r"
        android:textSize="25dp"
        android:text="dert@hj.co" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/pass1_reg"
        android:layout_gravity="center_horizontal"
        android:hint="@string/prompt_pass1_r"
        android:textSize="25dp"
        android:text="qwertyuiop1234" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/pass2_log"
        android:hint="@string/prompt_pass2_r"
        android:textSize="25dp"
        android:text="qwertyuiop1234" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button_registro"
        android:text="@string/action_register" />
</LinearLayout>
