<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="futbolitoapp.apliko.co.futbolitoapp.RegistroActivity"
    android:orientation="vertical"
    android:background="#262626">

    <fragment
        tools:layout="@layout/fragment_title_login"
        android:layout_width="match_parent"
        android:layout_height="49dp"
        android:name="futbolitoapp.apliko.co.futbolitoapp.fragments.TitleLoginFragment"
        android:id="@+id/fragment2" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="60dp" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/textview_nombre_grupo"
            android:layout_gravity="center_horizontal"
            android:hint="@string/prompt_email_r"
            android:textSize="25dp"
            android:background="@drawable/border_textview"
            android:textColor="#ffffff"
            android:singleLine="true"
            android:gravity="center_vertical|center_horizontal" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="14dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/textview_descripcion_grupo"
            android:layout_gravity="center_horizontal"
            android:hint="@string/prompt_pass1_r"
            android:textSize="25dp"
            android:background="@drawable/border_textview"
            android:textColor="#ffffff"
            android:singleLine="true"
            android:gravity="center_vertical|center_horizontal"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="14dp" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/spinner_ligas_grupo"
            android:hint="@string/prompt_pass2_r"
            android:textSize="25dp"
            android:background="@drawable/border_textview"
            android:textColor="#ffffff"
            android:gravity="center_vertical|center_horizontal"/>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Space
                android:layout_width="match_parent"
                android:layout_height="30dp" />

            <Button
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:id="@+id/button_crear_grupo"
                android:background="@drawable/btcreargrupo"
                android:layout_gravity="center" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>